--- a/src/app/admin/layout/menu.component.html
+++ b/src/app/admin/layout/menu.component.html
@@ -3,35 +3,35 @@
     <div [routerLink]="['/admin','users-management']">
 
       <h6>
-        <i class="pi pi-user"></i> User-Mangement
+        <i class="pi pi-user mr-1"></i> {{'aSidebar.um' | transloco}}
       </h6>
     </div>
   </li>
   <li>
     <div [routerLink]="['/admin','product-management']">
       <h6>
-        <i class="pi pi-database"></i> Product-Mangement
+        <i class="pi pi-database mr-1"></i>{{'aSidebar.pm' | transloco}}
       </h6>
     </div>
   </li>
   <li>
     <div [routerLink]="['/admin','wait-list']">
       <h6>
-        <i class="pi pi-users"></i> Wait List Users
+        <i class="pi pi-users mr-1"></i> {{'aSidebar.wm' | transloco}}
       </h6>
     </div>
   </li>
   <li>
     <div [routerLink]="['/admin','orders-management']">
       <h6>
-        <i class="pi pi-clone"></i> Orders-Mangement
+        <i class="pi pi-clone mr-1"></i> {{'aSidebar.om' | transloco}}
       </h6>
     </div>
   </li>
   <li>
     <div [routerLink]="['/admin','statics']">
       <h6>
-        <i class="pi pi-chart-line"></i> Statics
+        <i class="pi pi-chart-line mr-1"></i> {{'aSidebar.rpt' | transloco}}
       </h6>
     </div>
   </li>
