--- a/src/app/admin/layout/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/admin/layout/components/orders-management/get-orders/get-orders.component.html
@@ -1,85 +1,116 @@
-<div class="card">
-  <p-table
-    [value]="orders"
-     dataKey="order"
-    [rows]="2"
-    [rowsPerPageOptions]="[2, 5, 10]"
-    [paginator]="true"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [tableStyle]="{ 'min-width': '60rem' }"
-    styleClass="table"
-  >
-    <ng-template pTemplate="header">
-      <tr class="main">
-        <th style="width: 5rem"></th>
-        <th pSortableColumn="orderId">Order Id</th>
-        <th pSortableColumn="price">Amount</th>
-        <th pSortableColumn="userId">User Id</th>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-order let-expanded="expanded">
-      <tr>
-        <td>
-          <button
-            type="button"
-            pButton
-            pRipple
-            [pRowToggler]="order"
-            class="p-button-text p-button-rounded p-button-plain"
-            [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
-          ></button>
-        </td>
-        <td>{{ order.id }}</td>
-        <td>{{ order.totalAmount | currency : "USD" }}</td>
-        <td>{{ order.userId }}</td>
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="rowexpansion" let-order>
-      <tr class="bodyOrder">
-        <td colspan="7">
-          <div class="p-3">
-            <p-table [value]="order.orders" dataKey="id">
-              <ng-template pTemplate="header">
-                <tr>
-                  <th pSortableColumn="id">Id</th>
-                  <th pSortableColumn="name">Name</th>
-                  <th pSortableColumn="image">Image</th>
-                  <th pSortableColumn="price">Price</th>
-                  <th pSortableColumn="quantity">Quantity</th>
-                  <th style="width: 4rem">Status</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-product>
-                <tr>
-                  <td>{{ product.id }}</td>
-                  <td>{{ product.name }}</td>
-                  <td>
-                    <img
-                      [src]="getFileUrl(product?.file)"
-                      [alt]="product.name"
-                      width="50"
-                      class="shadow-4"
-                    />
-                  </td>
-                  <td>{{ product.priceStacked | currency : "USD" }}</td>
-                  <td>{{ product.quantity }}</td>
-                  <td>
-                    <p-tag
-                      [value]="product.selectedStatus.name"
-                      [severity]="getSeverity(product.selectedStatus.name)"
-                    ></p-tag>
-                  </td>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="emptymessage">
-                <tr>
-                  <td colspan="6">There are no order for this product yet.</td>
-                </tr>
-              </ng-template>
-            </p-table>
+<div class="orders-list">
+  <h2>{{ "dGetorders.header" | transloco }}</h2>
+
+  <div class="flex">
+    <button
+      type="button"
+      pButton
+      icon="pi pi-file-pdf"
+      (click)="exportPdf()"
+      class="p-button mx-2 my-2"
+      pTooltip="PDF"
+      tooltipPosition="bottom"
+    >
+      {{ "dGetorders.pdf" | transloco }}
+    </button>
+    <button
+      type="button"
+      pButton
+      icon="pi pi-file-excel"
+      (click)="exportExcel()"
+      class="p-button mx-2 my-2"
+      pTooltip="XLS"
+      tooltipPosition="bottom"
+    >
+      {{ "dGetorders.xls" | transloco }}
+    </button>
+  </div>
+
+  <div *ngFor="let order of orders" class="order-item">
+    <div class="order-info">
+      <div *ngFor="let userData of order?.userDataArray">
+        <div>{{ "dGetorders.userId" | transloco }} {{ order?.userId }}</div>
+        <div>{{ "dGetorders.userName" | transloco }} {{ userData.name  | uppercase}}</div>
+        <div>{{ "dGetorders.userEmail" | transloco }} <mark>{{ userData.email}}</mark></div>
+        <div>
+          {{ "dGetorders.userAddress" | transloco }} {{ userData.address }}
+        </div>
+        <button
+          type="button"
+          pButton
+          class="p-button"
+          (click)="toggleUserDetails(order.userId)"
+        >
+          {{
+            userDetailStatus[order.userId]
+              ? ("dGetorders.close" | transloco)
+              : ("dGetorders.open" | transloco)
+          }}
+        </button>
+        <table class="product-table">
+          <thead>
+            <tr>
+              <th>{{ "dGetorders.productFile" | transloco }}</th>
+              <th>{{ "dGetorders.productName" | transloco }}</th>
+              <th>{{ "dGetorders.piece" | transloco }}</th>
+              <th>{{ "dGetorders.status" | transloco }}</th>
+              <th>{{ "dGetorders.piecePrice" | transloco }}</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+    <div class="product-list" *ngIf="userDetailStatus[order.userId]">
+      <table class="product-table">
+        <tbody>
+          <tr *ngFor="let product of order?.orders" class="product-item">
+            <td>
+              <img
+                [src]="getFileUrl(product?.product.file)"
+                alt="{{ product?.product.name }}"
+                class="product-image"
+              />
+            </td>
+            <td>{{ product?.product.name }}</td>
+            <td>{{ product?.product.quantity }}</td>
+            <td>{{ product?.product.selectedStatus?.name | stockStatus }}</td>
+            <td>
+              {{ product?.product.priceStacked | currency : "USD" : "symbol" }}
+            </td>
+          </tr>
+        </tbody>
+        <div class="totalprice flex flex-row">
+          <div class="mr-1">{{ "dGetorders.totalPrice" | transloco }}</div>
+          <div>
+            {{ order.totalAmount | currency : "USD" : "symbol" }}
           </div>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+        </div>
+      </table>
+    </div>
+  </div>
 </div>
+<!--  -->
+<div class="card" *ngIf="!(orders && orders.length) && !ordersLoading">
+  <section class="page_404">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="col-sm-10 col-sm-offset-1 text-center">
+            <div
+              class="four_zero_four_bg"
+            >
+              <h4 class="text-center">
+                {{ "dGetorders.defaultHeader" | transloco }}
+              </h4>
+              <h6 class="text-center">
+                {{ "dGetorders.defaultDecs" | transloco }}
+              </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+
