--- a/src/app/admin/layout/components/wait-list/getwaitlist/getwaitlist.component.scss
+++ b/src/app/admin/layout/components/wait-list/getwaitlist/getwaitlist.component.scss
@@ -1,30 +1,37 @@
+$background-color: #ecf0f1;
+$module-color:#253741;
 
+.card{
+  background: $module-color;
+  border: 0.1px solid ;
 
+  h2{
+    color: $background-color;
+  }
+}
 .page_404 {
   padding: 40px 0;
-  background: #fff;
+  background: $module-color;
   font-family: "Arvo", serif;
   height: 100%;
 }
 
 .page_404 img {
   width: 100%;
- 
+
 }
 
 .four_zero_four_bg {
-  
-  min-height:90vh ;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.four_zero_four_bg h1 {
-  font-size: 80px;
+.four_zero_four_bg h4 {
+ color: $background-color;
 }
 
-.four_zero_four_bg h3 {
-  font-size: 80px;
+.four_zero_four_bg h6 {
+  color: $background-color;
 }
 
 .link_404 {
@@ -36,4 +43,39 @@
 }
 .contant_box_404 {
   margin-top: -50px;
+}
+
+:host ::ng-deep{
+
+  .p-button{
+    background: $background-color;
+    color: $module-color;
+    margin-right: 5px;
+    border: none;
+  }
+  .p-datatable-table{
+    background: $module-color;
+
+  }
+  .p-datatable-thead{
+    background: $module-color;
+    color: $background-color;
+
+    th{
+      background: $module-color;
+      color: $background-color;
+    }
+
+
+  }
+
+  td{
+    background: $module-color;
+    color: $background-color;
+}
+
+.p-paginator{
+  background: $module-color;
+    color: $background-color;
+}
 }
