--- a/src/app/dashboard/components/product-management/get-product/get-product.component.scss
+++ b/src/app/dashboard/components/product-management/get-product/get-product.component.scss
@@ -4,7 +4,7 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
-:host ::nng-deep{
+:host ::ng-deep{
   .table{
     width: 90%;
 
