--- a/src/app/admin/layout/components/product-management/get-products/get-products.component.html
+++ b/src/app/admin/layout/components/product-management/get-products/get-products.component.html
@@ -11,14 +11,13 @@
   >
     <ng-template pTemplate="header">
       <tr class="main">
-        <th style="width: 5rem"></th>
-        <th pSortableColumn="name">Name</th>
-        <th>Image</th>
-        <th pSortableColumn="price">Price</th>
-        <th pSortableColumn="category">Category</th>
-        <th pSortableColumn="rating">Rating</th>
-        <th pSortableColumn="inventoryStatus">Status</th>
-        <th>Sil</th>
+        <th pSortableColumn="name">{{'aGetProduct.name' | transloco}}</th>
+        <th>{{'aGetProduct.image' | transloco}}</th>
+        <th pSortableColumn="price">{{'aGetProduct.price' | transloco}}</th>
+        <th pSortableColumn="category">{{'aGetProduct.category' | transloco}}</th>
+        <th pSortableColumn="rating">{{'aGetProduct.rating' | transloco}}</th>
+        <th pSortableColumn="inventoryStatus">{{'aGetProduct.status' | transloco}}</th>
+        <th>{{'aGetProduct.actions' | transloco}}</th>
       </tr>
     </ng-template>
     <ng-template
@@ -29,17 +28,6 @@
       let-ri="rowIndex"
     >
       <tr [pEditableRow]="product">
-        <!-- <td>
-          <button
-            type="button"
-            pButton
-            pRipple
-            [pRowToggler]="product"
-            class="p-button-text p-button-rounded p-button-plain"
-            [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
-          ></button>
-        </td> -->
-        <td></td>
         <td>
           <p-cellEditor>
             <ng-template pTemplate="input">
@@ -89,7 +77,7 @@
               />
             </ng-template>
             <ng-template pTemplate="output">
-              {{ product.category.name }}
+              {{ product.category.name | categoryStatus }}
             </ng-template>
           </p-cellEditor>
         </td>
@@ -111,7 +99,7 @@
             </ng-template>
             <ng-template pTemplate="output">
               <p-tag
-                [value]="product.selectedStatus.name"
+                [value]="product.selectedStatus.name | stockStatus"
                 [severity]="getSeverity(product.selectedStatus.name)"
               ></p-tag>
             </ng-template>
